--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -34,8 +34,6 @@ html {
   transform: translate(0, -50%);
 }
 
-.filter-drop {
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
-  background: inherit;
+.bg-default {
+  @apply bg-cover bg-no-repeat bg-center;
 }
